--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -334,6 +334,7 @@
 .result__image-wrapper-after {
   @media (max-width: @mobile-width-only) {
     position: absolute;
+    z-index: -1;
     top: 1px;
     left: 16px;
     width: 251px;
@@ -395,7 +396,66 @@
   }
 }
 
+.result__switch-block {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+}
+
+.result__switch {
+  position: relative;
+  display: block;
+  left: 3px;
+  width: 84px;
+  height: 14px;
+}
+
+.result__switch .result__switch-input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.result__switch-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 1);
+  border: 1px solid rgba(205, 205, 205, 1);
+  transition: 0.4s;
+}
+
+.result__switch-slider::after {
+  position: absolute;
+  content: "";
+  height: 6px;
+  width: 35px;
+  left: 5px;
+  bottom: 3px;
+  background-color: rgba(104, 183, 56, 1);
+  transition: 0.2s;
+}
+
+.result__switch-input:checked + .result__switch-slider::after {
+  transform: translateX(32px);
+  top: 4px;
+  bottom: 4px;
+  height: 5px;
+}
+
+/* Закругленные ползунки */
+.result__switch-slider,
+&::after {
+  border-radius: 6px;
+}
+
 .result__range {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
   width: 85px;
   height: 14px;
   border-radius: 7px;
